[project]
name = "xvoice-decomp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "torch>=2.5.1",
    "numpy",
    "rich",
    "polars",
    "librosa",
    "safetensors",
    "transformers",
    "xcodec2",
    "torchaudio>=2.6.0",
    "torchtune>=0.5.0",
    "torchao>=0.9.0",
    "setuptools>=76.1.0",
]

[project.optional-dependencies]
cpu = ["torch>=2.5.1"]
cuda = ["torch>=2.5.1"]
rocm = ["torch>=2.5.1", "pytorch-triton-rocm"]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cuda", extra = "cuda" },
    { index = "pytorch-rocm", extra = "rocm" },
]
pytorch-triton-rocm = [
    { index = "pytorch-rocm", extra = "rocm" },
]


[tool.uv]
conflicts = [
    [
        { extra = "cpu" },
        { extra = "cuda" },
        { extra = "rocm" },
    ],
]

[[tool.uv.dependency-metadata]]
name = "xcodec2"
requires-dist = ["torch", "transformers", "sentencepiece", "vector-quantize-pytorch", "tokenizers", "sympy==1.13.1"]


[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-rocm"
url = "https://download.pytorch.org/whl/rocm6.2.4"
explicit = true
